<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, NavegadorActivity!</string>
    <string name="app_name">Navegador</string>
    <string name="Nombre_del_certificado">Nombre</string>
    <string name="Common_name">Common Name</string>
    <string name="Organizacion">Organizacion</string>
    <string name="Autoridad">CA</string>
    <string name="Inicio">Inicio</string>
    <string name="Expira">Expira</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Cifrado">Cifrado</string>
    <string name="borrar">¿Quieres borrar el archivo del certificado?</string>
    <string name="Importante">Importante</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="borrar2">El certificado esta revocado. ¿Desea borrarlo?</string>

</resources>